--- a/style.css
+++ b/style.css
@@ -134,7 +134,10 @@ ul{
 a{
   text-decoration: none;
 }
-
+a:hover{
+    color: inherit;
+    text-decoration: none;
+}
                                 /* End css reset*/
 
                                 /* Header + menu*/
@@ -217,6 +220,11 @@ a{
 
 .sub_menu_item{
   color: black;
+    font-size: 14px;
+    text-decoration: none;
+}
+.sub_menu_item:hover{
+    color: #ffb900;
 }
 .submenu{
     position: absolute;
@@ -224,27 +232,31 @@ a{
     width: 100%;
     top: 40px;
     background-color: #ffeacb;
+    display: none;
 }
 .ul_submenu{
     display: flex;
     flex-direction: column;
-    height: 250px;
+    height: 310px;
     flex-wrap: wrap;
     width: 100%;
 }
 .li_submenu{
     text-align: left;
-    padding-left: 25px;
     margin-right: 25px;
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid #ffb900;
+    padding: 5px 0px 5px 25px;
 }
 .li_submenu:nth-child(6n){
     border-bottom: none;
 }
+.li_menu:hover .submenu{
+    display: block;
+}
                                 /* End header + menu*/
 
 @media screen and (max-width: 1200px){
-    .row_submenu{
+    .li_submenu{
         padding-left: 15px;
     }
 }
