--- a/style.css
+++ b/style.css
@@ -143,9 +143,9 @@ a:hover{
                                 /* Header + menu*/
 .header{
   display: flex;
-  background-image: url('img/header_bg.jpg');
+  background: url('img/header_bg.jpg') center top/cover;
   min-height: 400px;
-  background-position: center center;
+
   position: relative;
   flex-direction: column;
   z-index: 2;
@@ -158,7 +158,6 @@ a:hover{
 
 }
 .site_description{
-
   color: white;
   font-size: 18px;
 }
@@ -166,8 +165,19 @@ a:hover{
   padding: 15px 27px;
   background-color: rgba(0, 0, 0, 0.35);
   align-self: center;
-  position: relative;
+
 }
+
+.name_and_description::before{
+    content: "";
+    display: block;
+    filter: blur(5px);
+    background: url('img/header_bg.jpg') center top/cover;
+    width: 100vh;
+    height: 400px;
+    position: absolute;
+}
+
 .header_container{
   display: flex;
 }
@@ -261,6 +271,7 @@ a:hover{
     background-color: rgba(255, 255, 255, 0.95);
     top: 0px;
     left: 0px;
+    display: none;
 }
 .ul_mobile_submenu{
     display: none;
