--- a/style.css
+++ b/style.css
@@ -149,6 +149,19 @@ a:hover{
   position: relative;
   flex-direction: column;
   z-index: 2;
+
+}
+.header::before{
+    content: "";
+    background: url('img/header_bg.jpg') center top/cover;
+    filter: blur(5px);
+    background-clip: content-box;
+    padding: 100px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
 }
 .site_name {
   font-family: Pattaya-Regular;
@@ -168,15 +181,6 @@ a:hover{
 
 }
 
-.name_and_description::before{
-    content: "";
-    display: block;
-    filter: blur(5px);
-    background: url('img/header_bg.jpg') center top/cover;
-    width: 100vh;
-    height: 400px;
-    position: absolute;
-}
 
 .header_container{
   display: flex;
