--- a/style.css
+++ b/style.css
@@ -151,12 +151,11 @@ a:hover{
   z-index: 2;
 
 }
-.header::before{
-    content: "";
+.header_blur{
     background: url('img/header_bg.jpg') center top/cover;
     filter: blur(5px);
     background-clip: content-box;
-    padding: 100px;
+    padding: 1000px;
     position: absolute;
     width: 100%;
     height: 100%;
