--- a/style.css
+++ b/style.css
@@ -160,7 +160,16 @@ a:hover{
     width: 100%;
     height: 100%;
     z-index: -1;
+}
+.menu_blur{
+    background: url('img/header_bg.jpg') center top/cover;
+    filter: blur(5px);
+    background-clip: content-box;
 
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 .site_name {
   font-family: Pattaya-Regular;
